// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  Renders full mount 1`] = `<div />`;

exports[`Publication Details Component  Renders nothing for no display type lookup 1`] = `<div />`;

exports[`Publication Details Component  Renders the Type & Collection title for collections with multiple communities 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-community"
      id="standard-card-type-&-community"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-type-&-community-header"
            id="standard-card-type-&-community-header"
          >
            Type & Community
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-community-content"
        data-testid="standard-card-type-&-community-content"
        id="standard-card-type-&-community-content"
      >
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Collection
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Communities
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A289097&searchMode=advanced"
                    >
                      Research Data Collections
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-1"
                    data-testid="rek-ismemberof-1"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
                    >
                      School of Chemistry and Molecular Biosciences
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  Renders the Type & Collection title for collections with one community 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-community"
      id="standard-card-type-&-community"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-type-&-community-header"
            id="standard-card-type-&-community-header"
          >
            Type & Community
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-community-content"
        data-testid="standard-card-type-&-community-content"
        id="standard-card-type-&-community-content"
      >
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Collection
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Community
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A289097&searchMode=advanced"
                    >
                      Research Data Collections
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  Renders the Type title for Communities 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type"
      id="standard-card-type"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-type-header"
            id="standard-card-type-header"
          >
            Type
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-type-content"
        data-testid="standard-card-type-content"
        id="standard-card-type-content"
      >
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Community
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  should not render component with empty publication 1`] = `<div />`;

exports[`Publication Details Component  should render component 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-collection"
      id="standard-card-type-&-collection"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-type-&-collection-header"
            id="standard-card-type-&-collection-header"
          >
            Type & Collection
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-collection-content"
        data-testid="standard-card-type-&-collection-content"
        id="standard-card-type-&-collection-content"
      >
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Journal Article
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-subtype-label"
              >
                Sub-type
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-subtype"
              >
                Article (original research)
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Collections
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
                    >
                      School of Chemistry and Molecular Biosciences
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-1"
                    data-testid="rek-ismemberof-1"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A218311&searchMode=advanced"
                    >
                      HERDC Pre-Audit
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-2"
                    data-testid="rek-ismemberof-2"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A171723&searchMode=advanced"
                    >
                      UQ Centre for Clinical Research Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-3"
                    data-testid="rek-ismemberof-3"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3858&searchMode=advanced"
                    >
                      Institute for Molecular Bioscience - Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-4"
                    data-testid="rek-ismemberof-4"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3860&searchMode=advanced"
                    >
                      Australian Institute for Bioengineering and Nanotechnology Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-5"
                    data-testid="rek-ismemberof-5"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3831&searchMode=advanced"
                    >
                      School of Medicine Publications
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-collection"
      id="standard-card-type-&-collection"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-type-&-collection-header"
            id="standard-card-type-&-collection-header"
          >
            Type & Collection
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-collection-content"
        data-testid="standard-card-type-&-collection-content"
        id="standard-card-type-&-collection-content"
      >
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Journal Article
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-type-&-collection"
      id="standard-card-type-&-collection"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-type-&-collection-header"
            id="standard-card-type-&-collection-header"
          >
            Type & Collection
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-type-&-collection-content"
        data-testid="standard-card-type-&-collection-content"
        id="standard-card-type-&-collection-content"
      >
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type-label"
              >
                Type of work
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-display-type"
              >
                Journal Article
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator-label"
              >
                Content Indicators
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-content-indicator"
              >
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-0"
                  data-testid="rek-content-indicator-0"
                >
                  Scholarship of Teaching and Learning
                </span>
                <span
                  class="MuiBox-root css-1njruhw"
                  data-analyticsid="rek-content-indicator-1"
                  data-testid="rek-content-indicator-1"
                >
                  Protocol
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof-label"
              >
                Collections
              </span>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-ismemberof"
              >
                <ul
                  class="MuiBox-root css-csbpup"
                >
                  <li
                    data-analyticsid="rek-ismemberof-0"
                    data-testid="rek-ismemberof-0"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
                    >
                      School of Chemistry and Molecular Biosciences
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-1"
                    data-testid="rek-ismemberof-1"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A218311&searchMode=advanced"
                    >
                      HERDC Pre-Audit
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-2"
                    data-testid="rek-ismemberof-2"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A171723&searchMode=advanced"
                    >
                      UQ Centre for Clinical Research Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-3"
                    data-testid="rek-ismemberof-3"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3858&searchMode=advanced"
                    >
                      Institute for Molecular Bioscience - Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-4"
                    data-testid="rek-ismemberof-4"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3860&searchMode=advanced"
                    >
                      Australian Institute for Bioengineering and Nanotechnology Publications
                    </a>
                  </li>
                  <li
                    data-analyticsid="rek-ismemberof-5"
                    data-testid="rek-ismemberof-5"
                  >
                    <a
                      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3831&searchMode=advanced"
                    >
                      School of Medicine Publications
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
